@@ -4,7 +4,7 @@
 // Authors:
 //	Ben Maurer <bmaurer@novell.com>
 //
-// (C) 2005 Novell, Inc (http://www.novell.com)
+// (C) 2005-2010 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -36,6 +36,12 @@ namespace System.Web.UI.WebControls {
 		public override void AppendSubBuilder (ControlBuilder subBuilder)
 		{
 			throw new HttpException ("LiteralControlBuilder should never be called");
+		}
+
+		public override void AppendLiteralString (string s)
+		{
+			// What does this method _really_ do? The MSDN documentation is vague
+			base.AppendLiteralString (s);
 		}
 	}
 }
